# dxf-checker

./: .bumpver.toml  .gitignore  CHANGELOG.md  LICENSE.MD  README.md  README.txt  config.py  logger.py  main.py  pyproject.toml  requirements.txt  roads.prj  setup.py  utils.py
.github/workflows/: ci.yml  codeql.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
checks/: base.py  too_short_segment.py  unconnected_crossings.py  z_anomalous_vertices.py
dxf_checker/: __init__.py  config.py  interface.py  log_cleaner.py  logger.py  main.py  utils.py
dxf_checker/checks/: base.py  crossing_check.py  duplicate_vertices_check.py  road_geometry_validator_check.py  too_long_check.py  too_long_segment.py  too_short_check.py  z_anomalous_vertices.py  z_anomalous_vertices_check.py  zero_elevation_check.py
dxf_checker/checks/road_geometry_validator/: __init__.py  _utils.py  comparison_engine.py  dxf_reader.py  geometric_constraints.py  geometry_idealizer.py  road_line.py  validation_report.py
logs/: log_20250806_1728.txt  log_20250806_1733.txt  log_20250806_1735.txt  log_20250806_1737.txt  log_20250806_1738.txt  log_20250806_1743.txt  log_20250806_1818.txt  log_20250806_1819.txt  log_20250806_1823.txt  log_20250806_1825.txt  log_20250806_1826.txt  log_20250806_1827.txt  log_20250806_1829.txt  log_20250806_1836.txt  log_20250806_1841.txt  log_20250807_1044.txt  log_20250807_1146.txt  log_20250807_1152.txt  log_20250807_1155.txt  log_20250807_1207.txt
reports/: verbose_20250806_1728.txt  verbose_20250806_1733.txt  verbose_20250806_1735.txt  verbose_20250806_1737.txt  verbose_20250806_1738.txt  verbose_20250806_1743.txt  verbose_20250806_1818.txt  verbose_20250806_1819.txt  verbose_20250806_1823.txt  verbose_20250806_1825.txt  verbose_20250806_1826.txt  verbose_20250806_1827.txt  verbose_20250806_1829.txt  verbose_20250806_1836.txt  verbose_20250806_1841.txt  verbose_20250807_1044.txt  verbose_20250807_1146.txt  verbose_20250807_1152.txt
